changed the popup to dim the entire screen including the topbar, to circumvent a bug where parts of the page became visible when scrolling down.

--- a/application/src/main/webapp/css/newlook.css
+++ b/application/src/main/webapp/css/newlook.css
@@ -572,7 +572,7 @@ fieldset {
 #modalizer {
     background-color: white;
     z-index: 10;
-    top: 111px;
+    top: 0px;
     left: 0;
     position: fixed;
     width: 100%;
